# SQLite2mdb

./: CMakeLists.txt  LICENSE  PragmaSet.h  README.md  Roles.h  SQLite2mdb.cpp  command_line_parser.h  sqlite2mdb_cmd_parser.h  stdafx.h
DBUtils/: AbsDatabase.h  dsCopyTableData.cpp  dsCopyTableData.h  dsDatabase.cpp  dsDatabase.h  dsStrConv.cpp  dsTable.cpp  dsTable.h
DBUtils/Dao/: DaoDatabaseImpl.cpp  DaoDatabaseImpl.h
DBUtils/sqlite/: SqLiteRecordsetImpl.cpp  sqlite_database_impl.cpp  sqlite_database_impl.h
